começando a construir as funções

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </div>
         <div class="display">
             <ul>
-                <li><span>00</span>s</li>
-                <li><span>00</span>s</li>
+                <li><span>00</span>h</li>
+                <li><span>00</span>m</li>
                 <li><span>00</span>s</li>
                 <!-- <button></button> -->
             </ul>
@@ -37,5 +37,7 @@
         <button class="start">Iniciar</button>
         <button class="menu">o</button>
     </div>
+
+    <script src="js/functions.js"></script>
 </body>
 </html>
