--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
         </div>
         <button class="start">Iniciar</button>
         <button class="menu">o</button>
-    </div>
 
+
+        <div class="time_container">
+            <h1 class="cronometro">00h 00m 00s</h1>
+            <div class="divBtn">
+                <button class="btnPause">Pausar</button>           
+                <button class="btnDel">Apagar</button>
+                <button class="btnSave">Salvar</button>
+            </div>           
+        </div>
+
+    </div>
     <script src="js/functions.js"></script>
 </body>
 </html>
