--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
         <div class="time_container">
-            <h1 class="cronometro">00h 00m 00s</h1>
+            <h1 class="cronometro"><span>04</span>h <span>00</span>m <span>00</span>s</h1>
             <div class="divBtn">
                 <button class="btnPause">Pausar</button>           
                 <button class="btnDel">Apagar</button>
