mudança de idéia, adicionado keys teclado e som

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </div>
 
     </div>
+    <audio class="audio_alarm" src="assets/sound/alarm-clock.wav"></audio>
     <script src="js/functions.js"></script>
 </body>
 </html>
