--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div class="display">
             <ul>
-                <li><span>00</span>h</li>
-                <li><span>00</span>m</li>
-                <li><span>00</span>s</li>
+                <li><button class="btn_display" id="h+">+</button><div><span>00</span>h</div><button class="btn_display" id="h-">-</button></li>
+                <li><button class="btn_display" id="m+">+</button><div><span>00</span>m</div><button class="btn_display" id="m-">-</button></li>
+                <li><button class="btn_display" id="s+">+</button><div><span>00</span>s</div><button class="btn_display" id="s-">-</button></li>
                 <!-- <button></button> -->
             </ul>
         </div>
