--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div class="display">
             <ul>
-                <li><button class="btn_display" id="h+">+</button><div><span>00</span>h</div><button class="btn_display" id="h-">-</button></li>
-                <li><button class="btn_display" id="m+">+</button><div><span>00</span>m</div><button class="btn_display" id="m-">-</button></li>
-                <li><button class="btn_display" id="s+">+</button><div><span>00</span>s</div><button class="btn_display" id="s-">-</button></li>
+                <li><button class="btn_display" id="hp">+</button><div><span class="h">00</span>h</div><button class="btn_display" id="hm">-</button></li>
+                <li><button class="btn_display" id="mp">+</button><div><span class="m">00</span>m</div><button class="btn_display" id="mm">-</button></li>
+                <li><button class="btn_display" id="sp">+</button><div><span class="s">00</span>s</div><button class="btn_display" id="sm">-</button></li>
                 <!-- <button></button> -->
             </ul>
         </div>
@@ -49,6 +49,7 @@
 
     </div>
     <audio class="audio_alarm" src="assets/sound/alarm-clock.wav"></audio>
+    <audio class="audio_effectScroll" src="assets/sound/001.mp3"></audio>
     <script src="js/functions.js"></script>
 </body>
 </html>
