--- a/index.html
+++ b/index.html
@@ -14,9 +14,75 @@
         </div>
         <div class="display">
             <ul>
-                <li><button class="btn_display" id="hp">+</button><div><span class="h">00</span>h</div><button class="btn_display" id="hm">-</button></li>
-                <li><button class="btn_display" id="mp">+</button><div><span class="m">00</span>m</div><button class="btn_display" id="mm">-</button></li>
-                <li><button class="btn_display" id="sp">+</button><div><span class="s">00</span>s</div><button class="btn_display" id="sm">-</button></li>
+                <li><button class="btn_display" id="hp">   
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M509.121,125.966c-3.838-3.838-10.055-3.838-13.893,0L256.005,365.194L16.771,125.966c-3.838-3.838-10.055-3.838-13.893,0
+                                    c-3.838,3.838-3.838,10.055,0,13.893l246.18,246.175c1.842,1.842,4.337,2.878,6.947,2.878c2.61,0,5.104-1.036,6.946-2.878
+                                    l246.17-246.175C512.959,136.021,512.959,129.804,509.121,125.966z"/>
+                            </g>
+                        </g>
+                    </svg>
+                </button><div><span class="h">00</span>h</div><button class="btn_display" id="hm">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M509.121,125.966c-3.838-3.838-10.055-3.838-13.893,0L256.005,365.194L16.771,125.966c-3.838-3.838-10.055-3.838-13.893,0
+                                    c-3.838,3.838-3.838,10.055,0,13.893l246.18,246.175c1.842,1.842,4.337,2.878,6.947,2.878c2.61,0,5.104-1.036,6.946-2.878
+                                    l246.17-246.175C512.959,136.021,512.959,129.804,509.121,125.966z"/>
+                            </g>
+                        </g>
+                    </svg>
+                </button></li>
+                <li><button class="btn_display" id="mp">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M509.121,125.966c-3.838-3.838-10.055-3.838-13.893,0L256.005,365.194L16.771,125.966c-3.838-3.838-10.055-3.838-13.893,0
+                                    c-3.838,3.838-3.838,10.055,0,13.893l246.18,246.175c1.842,1.842,4.337,2.878,6.947,2.878c2.61,0,5.104-1.036,6.946-2.878
+                                    l246.17-246.175C512.959,136.021,512.959,129.804,509.121,125.966z"/>
+                            </g>
+                        </g>
+                    </svg>
+                </button><div><span class="m">00</span>m</div><button class="btn_display" id="mm">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M509.121,125.966c-3.838-3.838-10.055-3.838-13.893,0L256.005,365.194L16.771,125.966c-3.838-3.838-10.055-3.838-13.893,0
+                                    c-3.838,3.838-3.838,10.055,0,13.893l246.18,246.175c1.842,1.842,4.337,2.878,6.947,2.878c2.61,0,5.104-1.036,6.946-2.878
+                                    l246.17-246.175C512.959,136.021,512.959,129.804,509.121,125.966z"/>
+                            </g>
+                        </g>
+                    </svg>
+                </button></li>
+                <li><button class="btn_display" id="sp">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M509.121,125.966c-3.838-3.838-10.055-3.838-13.893,0L256.005,365.194L16.771,125.966c-3.838-3.838-10.055-3.838-13.893,0
+                                    c-3.838,3.838-3.838,10.055,0,13.893l246.18,246.175c1.842,1.842,4.337,2.878,6.947,2.878c2.61,0,5.104-1.036,6.946-2.878
+                                    l246.17-246.175C512.959,136.021,512.959,129.804,509.121,125.966z"/>
+                            </g>
+                        </g>
+                    </svg>
+                </button><div><span class="s">00</span>s</div><button class="btn_display" id="sm">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M509.121,125.966c-3.838-3.838-10.055-3.838-13.893,0L256.005,365.194L16.771,125.966c-3.838-3.838-10.055-3.838-13.893,0
+                                    c-3.838,3.838-3.838,10.055,0,13.893l246.18,246.175c1.842,1.842,4.337,2.878,6.947,2.878c2.61,0,5.104-1.036,6.946-2.878
+                                    l246.17-246.175C512.959,136.021,512.959,129.804,509.121,125.966z"/>
+                            </g>
+                        </g>
+                    </svg>
+                </button></li>
                 <!-- <button></button> -->
             </ul>
         </div>
@@ -34,16 +100,50 @@
                 <li>0</li>
             </ul>
         </div>
-        <button class="start">Iniciar</button>
-        <button class="menu">o</button>
+        <button class="btn start">Iniciar</button>
+        <button class="btn menu">
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                <g>
+                    <g>
+                        <path d="M416.667,0H95.333C42.766,0,0,42.767,0,95.334v321.332C0,469.233,42.766,512,95.333,512h321.334
+                            C469.234,512,512,469.233,512,416.666V95.334C512,42.767,469.234,0,416.667,0z M482,416.666C482,452.691,452.692,482,416.667,482
+                            H95.333C59.308,482,30,452.691,30,416.666V95.334C30,59.309,59.308,30,95.333,30h321.334C452.692,30,482,59.309,482,95.334
+                            V416.666z"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <path d="M400.6,120.5H111.4c-8.284,0-15,6.716-15,15s6.716,15,15,15h289.2c8.284,0,15-6.716,15-15S408.884,120.5,400.6,120.5z"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <path d="M400.6,241H111.4c-8.284,0-15,6.716-15,15s6.716,15,15,15h289.2c8.284,0,15-6.716,15-15S408.884,241,400.6,241z"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <path d="M400.6,361.5H111.4c-8.284,0-15,6.716-15,15s6.716,15,15,15h289.2c8.284,0,15-6.716,15-15S408.884,361.5,400.6,361.5z"/>
+                    </g>
+                </g>
+            </svg>
+        </button>
+        <div class="footer">
+            <div class="function">
+                <button class="btn">Timer</button>
+                <button class="btn">Cronômetro</button>
+            </div>
+        </div>
+        
 
 
         <div class="time_container">
             <h1 class="cronometro"><span>04</span>h <span>00</span>m <span>00</span>s</h1>
             <div class="divBtn">
-                <button class="btnPause">Pausar</button>           
-                <button class="btnDel">Apagar</button>
-                <button class="btnSave">Salvar</button>
+                <button class="btn btnPause btnClick">Pausar</button>           
+                <button class="btn btnDel">Apagar</button>
+                <button class="btn btnSave">Salvar</button>
             </div>           
         </div>
 
