--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         </button>
         <div class="footer">
             <div class="function">
-                <button class="btn">Timer</button>
-                <button class="btn">Cronômetro</button>
+                <button class="btn func func_active">Timer</button>
+                <button class="btn func ">Cronômetro</button>
             </div>
         </div>
         
